--- a/CoreBot.csproj
+++ b/CoreBot.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Microsoft.Bot.Builder.Integration.AspNet.Core" Version="4.6.3"/>
     <PackageReference Include="Microsoft.Recognizers.Text.DataTypes.TimexExpression" Version="1.1.5"/>
     <PackageReference Include="Microsoft.Bot.Builder.Azure" Version="4.6.3"/>
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.2.0"/>
   </ItemGroup>
   <Import Project="PostDeployScripts\IncludeSources.targets" Condition="Exists('PostDeployScripts\IncludeSources.targets')"/>
   <Import Project="..\PostDeployScripts\IncludeSources.targets" Condition="Exists('..\PostDeployScripts\IncludeSources.targets')"/>
