--- a/appsettings.json
+++ b/appsettings.json
@@ -2,7 +2,7 @@
   "LuisAPIHostName": "westus.api.cognitive.microsoft.com",
   "LuisAPIKey": "c9220b919dda40ba9c651b95368d2b4c",
   "LuisAppId": "d559c036-f6de-4ed1-b01e-fc301eceadcc",
-  "MicrosoftAppId": "340f3781-b7dd-483d-8409-b23497eea7d1",
-  "MicrosoftAppPassword": "XHp-8Jg74_5jRaNLs59u_@yfVoa",
+  "MicrosoftAppId": "",
+  "MicrosoftAppPassword": "",
   "ScmType": "GitHub"
 }
